--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <div class="badge">● 327 members online near you</div>
 
   <h1>Meet Someone Tonight ❤️</h1>
-  <p class="sub">Local singles are looking to chat right now.</p>
+  <p class="sub">Local singles are online and ready to chat.</p>
 
-  <!-- UPDATED IMAGE -->
-  <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e"
-       class="hero-img"
-       alt="smiling woman">
+  <!-- IMAGE ROTATOR -->
+  <div class="image-rotator">
+    <img id="rotatingImage" src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="dating">
+  </div>
 
   <div class="cta-box">
     <button id="joinBtn">Start Chatting Free</button>
